force-app/main/default/staticresources/python/Disappear/src/objects/Status__c.object
<CustomObject>
    <fields>
        <fullName>New_Status_After_Terminate_FPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Status After Terminate FPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PubRecordType__c</fullName>
        <description>Used to drive the recordtypes in the Publication object and the corresponding Layout</description>
        <label>PubRecordType</label>
        <picklist>
            <picklistValues>
                <fullName>Suggestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In FPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned to FPRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmit to FPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPR Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of a publication - 
Each status belongs to a stage
the stage will decide which chevron get highlighted.</description>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Suggest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPR Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StatusName__c</fullName>
        <label>Status Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>displayOrder__c</fullName>
        <description>display order</description>
        <label>displayOrder</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>displayOrder__c</columns>
        <columns>Stage__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>PubRecordType__c</columns>
        <columns>New_Status_After_Terminate_FPR__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Globals</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>displayOrder__c</columns>
        <columns>PubRecordType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Status__c.Global_Status</value>
        </filters>
        <label>Globals</label>
    </listViews>
    <nameField>
        <label>Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statuses</pluralLabel>
    <recordTypes>
        <fullName>AutoInsert</fullName>
        <active>true</active>
        <label>AutoInsert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Department_Status</fullName>
        <active>true</active>
        <label>Department Status</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_Status</fullName>
        <active>true</active>
        <label>Global Status</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legacy_Status</fullName>
        <active>true</active>
        <description>Status from Siebel System - no longer used in Appear</description>
        <label>Legacy Status</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>